Fixed textarea bug on safari

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,14 +2,14 @@
   text-align: center; }
 
 @media screen and (max-width: 800px){
-  *{
+  *:not(input.field) {    
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-  }
+}
 }
 
 *::selection {
